# inventario-api

./: .coveragerc  .gitignore  mypy.ini  pyproject.toml  pytest.ini  settings.yaml
inventario/admin/: __init__.py  usuario.py
inventario/apps/: __init__.py
inventario/managers/: __init__.py  usuario.py
inventario/managers/tests/: test_usuario_manager.py
inventario/migrations/: 0001_initial.py  0002_usuario_is_active.py
inventario/models/: usuario.py
inventario/models/tests/: test_usuario_model.py
src/: settings.py
tests/: test_inventario.py
